--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -27,4 +27,8 @@
         <option value="countery5">countery5</option>
     </select>
 
+    <h1>Two way data binding</h1>
+
+    <input type="text" id="name" [(ngModel)]="randomName">
+{{randomName}}
 </div>
