Refactor app.component.ts and enhance directives.component.ts with new features and improved structure

--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -27,7 +27,7 @@
         <option value="countery5">countery5</option>
     </select>
 
-    <h1>Two way data binding</h1>
+    <h1>*****Two way data binding*****</h1>
 
     <input type="text" id="name" [(ngModel)]="randomName">
 {{randomName}}
