Add SignalsComponent with counter functionality and update app.component references

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <!-- <app-data-binding></app-data-binding> -->
 
-<app-directives></app-directives>
+<!-- <app-directives></app-directives> -->
+
+<app-signals></app-signals>
 
 <router-outlet />
