--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 <!-- <app-directives></app-directives> -->
 
-<app-signals></app-signals>
+<!-- <app-signals></app-signals> -->
 
 <router-outlet />
